cube spin added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   
   </head>
   <body>
+    <style>
+      .loader{
+        width: 100vw;
+        height: 100vh;
+        background: red;
+        position: fixed;
+      }
+    </style>
+    <div class="loader"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
