links added to projects

--- a/index.html
+++ b/index.html
@@ -13,11 +13,17 @@
       .loader{
         width: 100vw;
         height: 100vh;
-        background: red;
+        left:0;
+        top: 0;
+        background: #262730;
         position: fixed;
+        display: grid;
+        place-content: center;
+        place-items: center;
+        color: #FFF4E9;
       }
     </style>
-    <div class="loader"></div>
+    <div class="loader">Loading ...</div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
