--- a/index.html
+++ b/index.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Morgan Daniel</title>
 
-  
   </head>
   <body>
     <style>
-      .loader{
-        width: 100vw;
-        height: 100vh;
-        left:0;
-        top: 0;
+      html{
         background: #262730;
+      }
+      #myVideo {
         position: fixed;
-        display: grid;
-        place-content: center;
-        place-items: center;
-        color: #FFF4E9;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
       }
     </style>
-    <div class="loader">Loading ...</div>
+    <video preload='metadata' id = 'myVideo' width = '100' muted preload = "auto" autoplay = "autoplay" loop src="loader.mkv"></video>
+    <script>
+      var video = document.getElementById("myVideo");
+      video.playbackRate = 2;
+    </script>
+
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
   </body>
 </html>
